Update main file to use index.mjs instead of index.js

--- a/.github/actions/create-asset-download-lists-by-package/action.yml
+++ b/.github/actions/create-asset-download-lists-by-package/action.yml
@@ -12,4 +12,4 @@ outputs:
         description: 'A list of the JSON files containing asset download lists'
 runs:
     using: 'node20'
-    main: 'dist/index.js'
+    main: 'dist/index.mjs'
