--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -22,14 +22,15 @@ jobs:
           from-org: 'octodemo'
           from-org-pat: ${{ secrets.FROM_ORG_PAT }}
 
+      - name: Add JSON files to cache
+        uses: actions/cache@v4.0.1
+        with:
+          path: |
+            *.json
+          key: ${{ runner.os }}-json-files
+
       - name: Add list to job summary
         run: |
           echo "Maven Packages" >> $GITHUB_STEP_SUMMARY
           echo "-------------" >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.org-packages.outputs.packages }}" >> $GITHUB_STEP_SUMMARY
-
-      # - name: Setup upterm session
-      #   if: always()
-      #   uses: lhotari/action-upterm@v1
-      #   with:
-      #     wait-timeout-minutes: 1
