updates to paths

--- a/.github/actions/create-asset-download-lists-by-package/.env-example
+++ b/.github/actions/create-asset-download-lists-by-package/.env-example
@@ -1,4 +1,4 @@
 FROM_ORG=octodemo
 FROM_ORG_PAT=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 GITHUB_MAVEN_URL=https://maven.pkg.github.com
-GITHUB_WORKSPACE=../..
+GITHUB_WORKSPACE=../../..
