--- a/.github/actions/upload-maven-package-from-json/.env-example
+++ b/.github/actions/upload-maven-package-from-json/.env-example
@@ -1,4 +1,4 @@
 TO_ORG=thedave42-org
 TO_ORG_PAT=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 GITHUB_MAVEN_URL=https://maven.pkg.github.com
-GITHUB_WORKSPACE=../..
+GITHUB_WORKSPACE=../../..
