--- a/.github/actions/create-asset-download-lists-by-package/package.json
+++ b/.github/actions/create-asset-download-lists-by-package/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "JSONStream": "^1.3.5",
     "octokit": "^3.1.2",
     "path": "^0.12.7",
     "xml2js": "^0.6.2"
