--- a/.github/actions/create-asset-download-lists-by-package/package.json
+++ b/.github/actions/create-asset-download-lists-by-package/package.json
@@ -2,15 +2,11 @@
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
     "@octokit/core": "^6.0.1",
-    "@octokit/graphql": "^8.0.1",
     "axios": "^1.6.7",
+    "big-json": "^3.2.0",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
-    "JSONStream": "^1.3.5",
-    "octokit": "^3.1.2",
-    "path": "^0.12.7",
     "xml2js": "^0.6.2"
   }
 }
