Update environment variables and GraphQL query settings

--- a/.github/actions/create-asset-download-lists-by-package/.env-example
+++ b/.github/actions/create-asset-download-lists-by-package/.env-example
@@ -1,4 +1,8 @@
 FROM_ORG=octodemo
-FROM_ORG_PAT=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+FROM_ORG_PAT=XXXXXXXXX
+TO_ORG=thedave42-org
+TO_ORG_PAT=XXXXXXXXX
 GITHUB_MAVEN_URL=https://maven.pkg.github.com
 GITHUB_WORKSPACE=../../..
+GRAPHQL_QUERY_SIZE=20
+GRAPHQL_QUERY_DELAY=500
