Update dependencies and add console logging

--- a/.github/actions/create-asset-download-lists-by-package/package.json
+++ b/.github/actions/create-asset-download-lists-by-package/package.json
@@ -5,8 +5,8 @@
     "@octokit/core": "^6.0.1",
     "axios": "^1.6.7",
     "big-json": "^3.2.0",
+    "console-stamp": "^3.1.2",
     "dotenv": "^16.4.5",
-    "fs": "^0.0.1-security",
     "xml2js": "^0.6.2"
   }
 }
