--- a/.github/actions/upload-maven-package-from-json/package.json
+++ b/.github/actions/upload-maven-package-from-json/package.json
@@ -2,14 +2,12 @@
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
     "@octokit/core": "^6.0.1",
-    "@octokit/graphql": "^8.0.1",
     "axios": "^1.6.7",
+    "big-json": "^3.2.0",
+    "console-stamp": "^3.1.2",
     "dotenv": "^16.4.5",
-    "fs": "^0.0.1-security",
-    "octokit": "^3.1.2",
-    "path": "^0.12.7",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "yargs": "^17.7.2"
   }
 }
