Update cache key to include run ID

--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/cache@v4.0.1
         with:
           key: |
-            ${{ github.workflow }}-${{ github.run_attempt }}-json
+            ${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json
           path: |
             *.json
           save-always: true
@@ -69,7 +69,7 @@ jobs:
         uses: actions/cache@v4.0.1
         with:
           key: |
-            ${{ github.workflow }}-${{ github.run_attempt }}-json
+            ${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json
           path: |
             *.json
             
