Add upterm session setup and fail-on-cache-miss option

--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -51,6 +51,12 @@ jobs:
           echo "Maven Packages" >> $GITHUB_STEP_SUMMARY
           echo "-------------" >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.org-packages.outputs.packages }}" >> $GITHUB_STEP_SUMMARY
+
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        if: ${{ always() }}
+        with:
+          wait-timeout-minutes: 1 
   
   upload-assets:
     needs: get-packages
@@ -72,6 +78,13 @@ jobs:
             ${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json
           path: |
             *.json
+          fail-on-cache-miss: false
+      
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        if: ${{ always() }}
+        with:
+          wait-timeout-minutes: 1 
             
       - name: Read package ${{ matrix.pkg.name }} 
         run: |
