--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -56,7 +56,8 @@ jobs:
         uses: lhotari/action-upterm@v1
         if: ${{ always() }}
         with:
-          wait-timeout-minutes: 1 
+          wait-timeout-minutes: 1
+          limit-access-to-users: thedave42
   
   upload-assets:
     needs: get-packages
@@ -84,7 +85,8 @@ jobs:
         uses: lhotari/action-upterm@v1
         if: ${{ always() }}
         with:
-          wait-timeout-minutes: 1 
+          wait-timeout-minutes: 1
+          limit-access-to-users: thedave42
             
       - name: Read package ${{ matrix.pkg.name }} 
         run: |
