--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -79,16 +79,11 @@ jobs:
             ${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json
           path: |
             *.json
-          fail-on-cache-miss: false
-      
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
-        if: ${{ always() }}
-        with:
-          wait-timeout-minutes: 1
-          limit-access-to-users: thedave42
+          fail-on-cache-miss: true
             
       - name: Read package ${{ matrix.pkg.name }} 
         run: |
+          echo "Ready to migrate: ${{ matrix.pkg.toOwnerRepoExists }}"
           echo "Reading from file ${{ matrix.pkg.file }}"
-          cat ${{ matrix.pkg }}
+          cat ${{ matrix.pkg.file }}
+    
