Update to-org-pat in find-organization-packages.yml

--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -35,7 +35,7 @@ jobs:
           from-org: ${{ github.event.inputs.from-org }}
           from-org-pat: ${{ secrets.FROM_ORG_PAT }}
           to-org: ${{ github.events.inputs.to-org}}
-          to-org-pat: ${{ secrets.FROM_ORG_PAT }}
+          to-org-pat: ${{ secrets.TO_ORG_PAT }}
 
       - name: Add JSON files to cache
         uses: actions/cache@v4.0.1
