Update Maven package upload and asset download scripts

--- a/.github/actions/create-asset-download-lists-by-package/.env-example
+++ b/.github/actions/create-asset-download-lists-by-package/.env-example
@@ -6,3 +6,5 @@ GITHUB_MAVEN_URL=https://maven.pkg.github.com
 GITHUB_WORKSPACE=../../..
 GRAPHQL_QUERY_SIZE=20
 GRAPHQL_QUERY_DELAY=500
+REST_API_PAGE_SIZE=30
+
