--- a/.github/actions/create-asset-download-lists-by-package/package.json
+++ b/.github/actions/create-asset-download-lists-by-package/package.json
@@ -3,10 +3,12 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@octokit/core": "^6.0.1",
+    "@octokit/plugin-retry": "^7.0.3",
     "axios": "^1.6.7",
     "big-json": "^3.2.0",
     "console-stamp": "^3.1.2",
     "dotenv": "^16.4.5",
+    "octokit": "^3.1.2",
     "xml2js": "^0.6.2"
   }
 }
