--- a/.github/actions/upload-maven-package-from-json/.env-example
+++ b/.github/actions/upload-maven-package-from-json/.env-example
@@ -6,3 +6,5 @@ GITHUB_MAVEN_URL=https://maven.pkg.github.com
 GITHUB_WORKSPACE=../../..
 GRAPHQL_QUERY_SIZE=20
 GRAPHQL_QUERY_DELAY=500
+REST_API_PAGE_SIZE=30
+
