--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -60,6 +60,9 @@ jobs:
         matrix:
           pkg: ${{fromJson(needs.get-packages.outputs.packages)}}
 
+    outputs:
+      pkg: ${{ matrix.pkg }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -79,4 +82,12 @@ jobs:
           echo "Ready to migrate: ${{ matrix.pkg.toOwnerRepoExists }}"
           echo "Reading from file ${{ matrix.pkg.file }}"
           cat ${{ matrix.pkg.file }}
+          
+  check-matrix:
+    needs: upload-assets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check matrix
+        run: |
+          echo "Matrix: ${{ toJson(needs.upload-assets.outputs.pkg) }}"
     
