--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -58,10 +58,7 @@ jobs:
 
     strategy:
         matrix:
-          pkg: ${{ steps.org-packages.outputs.packages }}
-
-    outputs:
-      pkg: ${{ matrix.pkg }}
+          pkg: ${{fromJson(needs.get-packages.outputs.packages)}}
 
     steps:
       - name: Check out code
@@ -78,10 +75,35 @@ jobs:
           fail-on-cache-miss: true
             
       - name: Read package ${{ matrix.pkg.name }} 
-        id: read-package
         run: |
           echo "Ready to migrate: ${{ matrix.pkg.toOwnerRepoExists }}"
           echo "Reading from file ${{ matrix.pkg.file }}"
           cat ${{ matrix.pkg.file }}
+          
+  another-job:
+    needs: get-packages
+    runs-on: ubuntu-latest
 
-    
+    strategy:
+        matrix:
+          pkg: ${{fromJson(needs.get-packages.outputs.packages)}}
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      # retrieve cache
+      - name: Restore JSON files from cache
+        uses: actions/cache@v4.0.1
+        with:
+          key: |
+            ${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json
+          path: |
+            *.json
+          fail-on-cache-miss: true
+            
+      - name: Read package ${{ matrix.pkg.name }} 
+        run: |
+          echo "Ready to migrate: ${{ matrix.pkg.toOwnerRepoExists }}"
+          echo "Reading from file ${{ matrix.pkg.file }}"
+          cat ${{ matrix.pkg.file }}
