--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Get values from Issue form
         id: get-values
         run: |
-          echo "::set-output name=from-org::$(echo ${{ github.event.issue.body }} | grep -oP 'from-org: \K\w+')"
-          echo "::set-output name=to-org::$(echo ${{ github.event.issue.body }} | grep -oP 'to-org: \K\w+')"
+          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'from-org: \K\w+')" >> $GITHUB_OUTPUT
+          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'to-org: \K\w+')" >> $GITHUB_OUTPUT
+          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'from-org: \K\w+')" >> $GITHUB_STEP_SUMMARY
+          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'to-org: \K\w+')" >> $GITHUB_STEP_SUMMARY
         shell: bash
 
       - name: Get Maven Packages
