Update organization name extraction in workflow file

--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -25,10 +25,10 @@ jobs:
         id: get-values
         run: |
           echo "${{ github.event.issue.body }}" >> $GITHUB_STEP_SUMMARY
-          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'from-org: \K\w+')" >> $GITHUB_OUTPUT
-          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'to-org: \K\w+')" >> $GITHUB_OUTPUT
-          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'from-org: \K\w+')" >> $GITHUB_STEP_SUMMARY
-          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'to-org: \K\w+')" >> $GITHUB_STEP_SUMMARY
+          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Source Organization Name \K\w+')" >> $GITHUB_OUTPUT
+          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Destination Organization Name \K\w+')" >> $GITHUB_OUTPUT
+          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Source Organization Name \K\w+')" >> $GITHUB_STEP_SUMMARY
+          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Destination Organization Name \K\w+')" >> $GITHUB_STEP_SUMMARY
         shell: bash
 
       - name: Get Maven Packages
