--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -24,11 +24,12 @@ jobs:
       - name: Get values from Issue form
         id: get-values
         run: |
-          echo "${{ github.event.issue.body }}" >> $GITHUB_STEP_SUMMARY
-          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Source Organization Name \K\w+')" >> $GITHUB_OUTPUT
-          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Destination Organization Name \K\w+')" >> $GITHUB_OUTPUT
-          echo "from-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Source Organization Name \K\w+')" >> $GITHUB_STEP_SUMMARY
-          echo "to-org=$(echo ${{ github.event.issue.body }} | grep -oP 'Destination Organization Name \K\w+')" >> $GITHUB_STEP_SUMMARY
+          FROM_ORG=$(echo "${{ github.event.issue.body }}" | awk '/### Source Organization Name/{getline; getline; print}')
+          echo "from-org=$FROM_ORG" >> "$GITHUB_OUTPUT"
+          echo "from-org=$FROM_ORG" >> "$GITHUB_STEP_SUMMARY"
+          TO_ORG=$(echo "${{ github.event.issue.body }}" | awk '/### Destination Organization Name/{getline; getline; print}')
+          echo "to-org=$TO_ORG" >> "$GITHUB_OUTPUT"
+          echo "to-org=$TO_ORG" >> "$GITHUB_STEP_SUMMARY"
         shell: bash
 
       - name: Get Maven Packages
