Update migration workflow and issue template

--- a/.github/ISSUE_TEMPLATE/maven-migration.yml
+++ b/.github/ISSUE_TEMPLATE/maven-migration.yml
@@ -1,7 +1,7 @@
-name: Start Maven Migration
+name: Maven Migration
 description: Start a GitHub Packages Maven repository migration between two Organizations
 title: "Start Maven Migration"
-labels: ["start-migration"]
+labels: ["check-migration"]
 body:
 - type: markdown
   attributes:
