Update Maven migration issue template and workflow

--- a/.github/ISSUE_TEMPLATE/maven-migration.yml
+++ b/.github/ISSUE_TEMPLATE/maven-migration.yml
@@ -23,3 +23,7 @@ body:
     placeholder: "e.g. octocat"
   validations:
     required: true
+- type: markdown
+  attributes:
+    value: |
+      <!-- packages -->
