--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Generate markdown tasks and update issue body
         run: |
           echo "${{ github.event.issue.body }}" | awk '/<!--- packages -->/{exit}1' > task-list.md
+          echo "<!-- packages -->" >> task-list.md
           echo "### Package List" >> task-list.md
           echo "" >> task-list.md
           echo '${{ steps.org-packages.outputs.packages }}' | jq -r '.[] | if .toOwnerRepoExists == false then "- [ ] ~" + .name + "~" else "- [ ] " + .name end' >> task-list.md
