--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           from-org: ${{ steps.get-values.outputs.from-org }}
           from-org-pat: ${{ secrets.FROM_ORG_PAT }}
-          to-org: ${{ steps.get-values.outputs.to-org}}
+          to-org: ${{ steps.get-values.outputs.to-org }}
           to-org-pat: ${{ secrets.TO_ORG_PAT }}
 
       - name: Add JSON files to cache
@@ -63,7 +63,7 @@ jobs:
           echo "" >> task-list.md
           echo '${{ steps.org-packages.outputs.packages }}' | jq -r '.[] | if .toOwnerRepoExists == false then "- [ ] ~" + .name + "~" else "- [ ] " + .name end' >> task-list.md
           if echo '${{ steps.org-packages.outputs.packages }}' | jq 'any(.[]; .toOwnerRepoExists == false)'; then
-            echo "> Note: packages that are struck out do not have a corresponding repository in the destination Organization and are not ready to migrate." >> task-list.md
+            echo "> **Note**: packages that are struck out do not have a corresponding repository in the Organization `${{ steps.get-values.outputs.to-org }}`.  Please create/migrate the necessary repository to `${{ steps.get-values.outputs.to-org }}` and add the `check-migration` label back to this issue to re-check." >> task-list.md
           fi
           echo "" >> task-list.md
           echo "<!-- Do not remove the below comment. -->"
