--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -57,7 +57,7 @@ jobs:
       
       - name: Generate markdown tasks and update issue body
         run: |
-          echo '${{ github.event.issue.body }}' | awk '/<!--- packages -->/{exit}1' > task-list.md
+          echo '${{ github.event.issue.body }}' | awk '/<!-- packages -->/{exit}1' > task-list.md
           echo "<!-- packages -->" >> task-list.md
           echo "### Package List" >> task-list.md
           echo "" >> task-list.md
@@ -67,7 +67,7 @@ jobs:
           fi
           echo "" >> task-list.md
           echo "<!-- Do not remove the below comment. -->"
-          echo "<!--- package-list=\"${{ steps.org-packages.outputs.packages }}\" -->" >> task-list.md
+          echo "<!-- package-list=\"${{ steps.org-packages.outputs.packages }}\" -->" >> task-list.md
           gh issue edit ${{ github.event.issue.number }} --body "$(cat task-list.md)"
         shell: bash
         env:
