Add cache key to task-list.md

--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -68,6 +68,7 @@ jobs:
           echo "" >> task-list.md
           echo "<!-- Do not remove the below comment. -->"
           echo "<!-- package-list=\"${{ steps.org-packages.outputs.packages }}\" -->" >> task-list.md
+          echo "<!-- cache-key=\"${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json\" -->" >> task-list.md
           gh issue edit ${{ github.event.issue.number }} --body "$(cat task-list.md)"
         shell: bash
         env:
