--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -19,12 +19,16 @@ jobs:
                 TO_ORG=$(echo '${{ github.event.issue.body }}' | awk '/### Destination Organization Name/{getline; getline; print; exit}')
                 PACKAGE_LIST=$(echo '${{ github.event.issue.body }}' | awk '/<!-- package-list="/{print; exit}' | sed 's/<!-- //;s/ -->//')
                 CACHE_KEY=$(echo '${{ github.event.issue.body }}' | awk '/<!-- cache-key="/{print; exit}' | sed 's/<!-- //;s/ -->//')
+                TASKS=$(echo '${{ github.event.issue.body }}' | awk '/### Package List/,/> **Note**/' | grep '\[x\]' | sed -n 's/.*\] \(.*\) (\(.*\))/\1/p' | jq -R -s -c 'split("\n")[:-1]')
                 echo "from-org=$FROM_ORG" >> "$GITHUB_OUTPUT"
                 echo "to-org=$TO_ORG" >> "$GITHUB_OUTPUT"
                 echo "$PACKAGE_LIST" >> "$GITHUB_OUTPUT"
                 echo "$CACHE_KEY" >> "$GITHUB_OUTPUT"
+                echo "selected-tasks=$TASKS" >> "$GITHUB_OUTPUT"
+                echo "selected-tasks=$TASKS" >> "$GITHUB_STEP_SUMMARY"
                 echo "from-org=$FROM_ORG" >> "$GITHUB_STEP_SUMMARY"
                 echo "to-org=$TO_ORG" >> "$GITHUB_STEP_SUMMARY"
                 echo "$PACKAGE_LIST" >> "$GITHUB_STEP_SUMMARY"
                 echo "$CACHE_KEY" >> "$GITHUB_STEP_SUMMARY"
             shell: bash
+
